--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 </main>
 
+<a href="https://docs.google.com/presentation/d/1yJBjv2uxGSF4iLDMUor5Z31xzKJ7HBFp/edit?usp=sharing&ouid=101396034652018200848&rtpof=true&sd=true"></a>
 <footer>
 
 </footer>
